--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
 
 
     <!-- Scripts for Waves -->
-    <script src="../waves_animation/waves_files/three.js.download"></script>
-		<script src="../waves_animation/waves_files/Projector.js.download"></script>
-		<script src="../waves_animation/waves_files/CanvasRenderer.js.download"></script>
+    <script src="/waves_animation/waves_files/three.js.download"></script>
+		<script src="/waves_animation/waves_files/Projector.js.download"></script>
+		<script src="/waves_animation/waves_files/CanvasRenderer.js.download"></script>
 
-		<script src="../waves_animation/waves_files/stats.min.js.download"></script>
+		<script src="/waves_animation/waves_files/stats.min.js.download"></script>
 
 		<script>
 
