--- a/index.html
+++ b/index.html
@@ -322,25 +322,23 @@
     </section>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="exigo/vendor/jquery/jquery.min.js"></script>
-    <script src="exigo/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="exigo/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="exigo/vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="exigo/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="exigo/js/creative.min.js"></script>
+    <script src="js/creative.min.js"></script>
 
 
     <!-- Scripts for Waves -->
-    <script src="exigo/waves_animation/waves_files/three.js.download"></script>
-		<script src="exigo/waves_animation/waves_files/Projector.js.download"></script>
-		<script src="exigo/waves_animation/waves_files/CanvasRenderer.js.download"></script>
-
-		<script src="exigo/cd
-    waves_animation/waves_files/stats.min.js.download"></script>
+    <script src="waves_animation/waves_files/three.js.download"></script>
+		<script src="waves_animation/waves_files/Projector.js.download"></script>
+		<script src="waves_animation/waves_files/CanvasRenderer.js.download"></script>
+		<script src="waves_animation/waves_files/stats.min.js.download"></script>
 
 		<script>
 
