Adding link button

--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
       	</form>
 
       </div>
+      <div class="col-lg-8 mx-auto text-center" style="padding-top:50px">
+        <a class="btn btn-light btn-xl " href="http://wholesome-auditor.herokuapp.com">Generate Report</a>
+      </div>
+
+
     </section>
 
 
