--- a/index.html
+++ b/index.html
@@ -46,33 +46,12 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#drag-and-drop">Try Exigo</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li> -->
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- <header class="masthead text-center text-white d-flex">
-      <div id="sketch-holder">
-     <canvas></canvas>
-      <div class="container my-auto", id="overlay">
-        <div class="row">
-          <div class="col-lg-10 mx-auto">
-            <h1 class="text-uppercase">
-              <strong>Interpretability made easy</strong>
-            </h1>
-            <hr>
-          </div>
-          <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Exigo helps you understand your models. Using the latest interpretation and fairness methods, Exigo generates a complete report that describes your model and data and gives you insights to improve your systems.</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#portfolio">Try it out</a>
-          </div>
-        </div>
-        </div>
-      </div>
-    </header> -->
+
 
     <header>
       <div id="sketch-holder"> </div>
@@ -92,12 +71,57 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">Exigo gives you the best insights!</h2>
+            <h2 class="section-heading text-white">Exigo - Overview</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">Exigo leverages the blockchain to connect a user-friendly, scalable platform to multiple
             decentralized IoT devices around the globe. Using the latest Machine Learning techniques, Exigo delivers state-of-the-art artificial intelligence
           knowledge straight to your screen. Our big-data approach is fully cloud-based and is commited to providing the best user experience in the market.</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get started!</a>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Straight to the demo</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="EDA">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">EDA</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="Literature Review">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Exigo has it all</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="Modeling Approach">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Exigo has it all</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="Results">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Exigo has it all</h2>
+            <hr class="my-4">
           </div>
         </div>
       </div>
@@ -145,114 +169,21 @@
         </div>
       </div>
     </section>
-<!--
-    <section class="p-0" id="portfolio">
-      <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
 
-    <style>
-      #control-container {
-        padding: 0px !important;
-      }
 
-      .e-upload {
-        width: 72%;
-      }
-    </style>
+        <section id="Conclusion">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Exigo has it all</h2>
+                <hr class="my-4">
+              </div>
+            </div>
+          </div>
+        </section>
+
+
 
     <section class="bg-primary" id="drag-and-drop">
 
@@ -263,14 +194,6 @@
       </div>
 
       <div class="container2"  role="main">
-      	<!-- <h1><a href="/article-url"></a></h1> -->
-      	<!-- <nav role="navigation">
-      		<a href="https://css-tricks.com/examples/DragAndDropFileUploading/" class="is-selected">Auto Submit</a>
-      		<a href="https://css-tricks.com/examples/DragAndDropFileUploading/?submit-on-demand">Submit On Demand</a>
-      	</nav> -->
-
-      	<!-- <form method="post" action="https://css-tricks.com/examples/DragAndDropFileUploading//?" enctype="multipart/form-data" novalidate class="box"> -->
-
 
       		<div class="box __input">
       			<svg class="box__icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43">
@@ -290,17 +213,7 @@
       <div class="col-lg-8 mx-auto text-center" style="padding-top:50px">
         <a class="btn btn-light btn-xl " href="http://wholesome-auditor.herokuapp.com">Generate Report</a>
       </div>
-
-
     </section>
-
-
-    <!-- <section class="bg-dark text-white">
-      <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
-      </div>
-    </section> -->
 
     <section id="contact">
       <div class="container">
@@ -513,196 +426,6 @@
 
 		</script>
 
-
-
-
-
-    <script>
-
-    	'use strict';
-
-    	;( function ( document, window, index )
-    	{
-    		// feature detection for drag&drop upload
-    		var isAdvancedUpload = function()
-    			{
-    				var div = document.createElement( 'div' );
-    				return ( ( 'draggable' in div ) || ( 'ondragstart' in div && 'ondrop' in div ) ) && 'FormData' in window && 'FileReader' in window;
-    			}();
-
-
-    		// applying the effect for every form
-    		var forms = document.querySelectorAll( '.box' );
-    		Array.prototype.forEach.call( forms, function( form )
-    		{
-    			var input		 = form.querySelector( 'input[type="file"]' ),
-    				label		 = form.querySelector( 'label' ),
-    				errorMsg	 = form.querySelector( '.box__error span' ),
-    				restart		 = form.querySelectorAll( '.box__restart' ),
-    				droppedFiles = false,
-    				showFiles	 = function( files )
-    				{
-    					label.textContent = files.length > 1 ? ( input.getAttribute( 'data-multiple-caption' ) || '' ).replace( '{count}', files.length ) : files[ 0 ].name;
-    				},
-    				triggerFormSubmit = function()
-    				{
-    					var event = document.createEvent( 'HTMLEvents' );
-    					event.initEvent( 'submit', true, false );
-    					form.dispatchEvent( event );
-    				};
-
-    			// letting the server side to know we are going to make an Ajax request
-    			var ajaxFlag = document.createElement( 'input' );
-    			ajaxFlag.setAttribute( 'type', 'hidden' );
-    			ajaxFlag.setAttribute( 'name', 'ajax' );
-    			ajaxFlag.setAttribute( 'value', 1 );
-    			form.appendChild( ajaxFlag );
-
-    			// automatically submit the form on file select
-    			input.addEventListener( 'change', function( e )
-    			{
-    				showFiles( e.target.files );
-
-
-    				triggerFormSubmit();
-
-
-    			});
-
-    			// drag&drop files if the feature is available
-    			if( isAdvancedUpload )
-    			{
-    				form.classList.add( 'has-advanced-upload' ); // letting the CSS part to know drag&drop is supported by the browser
-
-    				[ 'drag', 'dragstart', 'dragend', 'dragover', 'dragenter', 'dragleave', 'drop' ].forEach( function( event )
-    				{
-    					form.addEventListener( event, function( e )
-    					{
-    						// preventing the unwanted behaviours
-    						e.preventDefault();
-    						e.stopPropagation();
-    					});
-    				});
-    				[ 'dragover', 'dragenter' ].forEach( function( event )
-    				{
-    					form.addEventListener( event, function()
-    					{
-    						form.classList.add( 'is-dragover' );
-    					});
-    				});
-    				[ 'dragleave', 'dragend', 'drop' ].forEach( function( event )
-    				{
-    					form.addEventListener( event, function()
-    					{
-    						form.classList.remove( 'is-dragover' );
-    					});
-    				});
-    				form.addEventListener( 'drop', function( e )
-    				{
-    					droppedFiles = e.dataTransfer.files; // the files that were dropped
-    					showFiles( droppedFiles );
-
-
-    					triggerFormSubmit();
-
-    									});
-    			}
-
-
-    			// if the form was submitted
-    			form.addEventListener( 'submit', function( e )
-    			{
-    				// preventing the duplicate submissions if the current one is in progress
-    				if( form.classList.contains( 'is-uploading' ) ) return false;
-
-    				form.classList.add( 'is-uploading' );
-    				form.classList.remove( 'is-error' );
-
-    				if( isAdvancedUpload ) // ajax file upload for modern browsers
-    				{
-    					e.preventDefault();
-
-    					// gathering the form data
-    					var ajaxData = new FormData( form );
-    					if( droppedFiles )
-    					{
-    						Array.prototype.forEach.call( droppedFiles, function( file )
-    						{
-    							ajaxData.append( input.getAttribute( 'name' ), file );
-    						});
-    					}
-
-    					// ajax request
-    					var ajax = new XMLHttpRequest();
-    					ajax.open( form.getAttribute( 'method' ), form.getAttribute( 'action' ), true );
-
-    					ajax.onload = function()
-    					{
-    						form.classList.remove( 'is-uploading' );
-    						if( ajax.status >= 200 && ajax.status < 400 )
-    						{
-    							var data = JSON.parse( ajax.responseText );
-    							form.classList.add( data.success == true ? 'is-success' : 'is-error' );
-    							if( !data.success ) errorMsg.textContent = data.error;
-    						}
-    						else alert( 'Error. Please, contact the webmaster!' );
-    					};
-
-    					ajax.onerror = function()
-    					{
-    						form.classList.remove( 'is-uploading' );
-    						alert( 'Error. Please, try again!' );
-    					};
-
-    					ajax.send( ajaxData );
-    				}
-    				else // fallback Ajax solution upload for older browsers
-    				{
-    					var iframeName	= 'uploadiframe' + new Date().getTime(),
-    						iframe		= document.createElement( 'iframe' );
-
-    						$iframe		= $( '<iframe name="' + iframeName + '" style="display: none;"></iframe>' );
-
-    					iframe.setAttribute( 'name', iframeName );
-    					iframe.style.display = 'none';
-
-    					document.body.appendChild( iframe );
-    					form.setAttribute( 'target', iframeName );
-
-    					iframe.addEventListener( 'load', function()
-    					{
-    						var data = JSON.parse( iframe.contentDocument.body.innerHTML );
-    						form.classList.remove( 'is-uploading' )
-    						form.classList.add( data.success == true ? 'is-success' : 'is-error' )
-    						form.removeAttribute( 'target' );
-    						if( !data.success ) errorMsg.textContent = data.error;
-    						iframe.parentNode.removeChild( iframe );
-    					});
-    				}
-    			});
-
-
-    			// restart the form if has a state of error/success
-    			Array.prototype.forEach.call( restart, function( entry )
-    			{
-    				entry.addEventListener( 'click', function( e )
-    				{
-    					e.preventDefault();
-    					form.classList.remove( 'is-error', 'is-success' );
-    					input.click();
-    				});
-    			});
-
-    			// Firefox focus bug fix for file input
-    			input.addEventListener( 'focus', function(){ input.classList.add( 'has-focus' ); });
-    			input.addEventListener( 'blur', function(){ input.classList.remove( 'has-focus' ); });
-
-    		});
-    	}( document, window, 0 ));
-
-    </script>
-
   </body>
-
 
 </html>
