--- a/index.html
+++ b/index.html
@@ -193,6 +193,16 @@
         </p>
       </div>
 
+      <style>
+      #control-container {
+        padding: 0px !important;
+      }
+
+      .e-upload {
+        width: 72%;
+      }
+      </style>
+
       <div class="container2"  role="main">
 
       		<div class="box __input">
