--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Exigo has it all</h2>
+            <h2 class="section-heading">Modeling Approach</h2>
+            <p>Camilo #TODO</p>
             <hr class="my-4">
           </div>
         </div>
@@ -201,7 +202,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Exigo has it all</h2>
+            <h2 class="section-heading">Results</h2>
+            <p>We could tell you about our results but why don't we just <em> show</em> you?</p>
             <hr class="my-4">
           </div>
         </div>
@@ -257,7 +259,8 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Exigo has it all</h2>
+                <h2 class="section-heading">Conclusion</h2>
+                <p>We are obviously the best</p>
                 <hr class="my-4">
               </div>
             </div>
