--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       }
       </style>
 
-      <div class="container2"  role="main">
+      <!-- <div class="container2"  role="main">
 
       		<div class="box __input">
       			<svg class="box__icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43">
@@ -294,15 +294,15 @@
       			<button type="submit" class="box__button">Upload</button>
       		</div>
 
-
+          <form>
       		<div class="box__uploading">Uploading&hellip;</div>
       		<div class="box__success">Done! <a href="https://css-tricks.com/examples/DragAndDropFileUploading//?" class="box__restart" role="button">Upload more?</a></div>
       		<div class="box__error">Error! <span></span>. <a href="https://css-tricks.com/examples/DragAndDropFileUploading//?" class="box__restart" role="button">Try again!</a></div>
       	</form>
 
-      </div>
+      </div> -->
       <div class="col-lg-8 mx-auto text-center" style="padding-top:50px">
-        <a class="btn btn-light btn-xl " href="http://wholesome-auditor.herokuapp.com">Generate Report</a>
+        <a class="btn btn-light btn-xl " href="http://wholesome-auditor.herokuapp.com">View Demo</a>
       </div>
     </section>
 
