--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
             million total loans, Just under 50% of them are current loans that have not either
             been defaulted on or paid back.  We will ignore these loans for modeling purposes,
             which leaves us with a dataset of around 850k loans. </p>
+            <svg width="960" height="500">pie_chart("data.csv")</svg>
+
+
+
+
             <hr class="my-4">
           </div>
         </div>
@@ -301,7 +306,7 @@
       </div>
     </section>
 
-    
+
     <section id="contact">
       <div class="container">
         <div class="row">
@@ -337,7 +342,10 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
+    <script src="js/helper.js"></script>
 
+    <!-- D3 for visulaization -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- Scripts for Waves -->
     <script src="waves_animation/waves_files/three.js.download"></script>
