add changes for svg

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             million total loans, Just under 50% of them are current loans that have not either
             been defaulted on or paid back.  We will ignore these loans for modeling purposes,
             which leaves us with a dataset of around 850k loans. </p>
-            <svg width="960" height="500">pie_chart("data.csv")</svg>
+            <script> pie_chart("data.csv") </script>
+            <svg width="960" height="500"></svg>
 
 
 
