add d3 pie chart

--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
             million total loans, Just under 50% of them are current loans that have not either
             been defaulted on or paid back.  We will ignore these loans for modeling purposes,
             which leaves us with a dataset of around 850k loans. </p>
-            <script> pie_chart("data.csv") </script>
             <svg width="960" height="500"></svg>
+            <script> pie_chart() </script>
+
 
 
 
