--- a/index.html
+++ b/index.html
@@ -191,8 +191,42 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Modeling Approach</h2>
-            <p>Camilo #TODO</p>
+            <h3 class="section-heading">Models</h3>
+            <p>
+            Our project revolves around determining accurate metrics for fairness and interpretability, so we naturally needed a
+            varied set of models to test our algorithms on. With that in mind, we decided to train 7 different models on the LendingClub
+            dataset, with varying parameters and values, so that we could later on test our interpretability metrics on them.
+            The main models analyzed were:
+            </p>
+
+            <li><span style="color:green;">1.</span>Logistic Regression</li>
+            <li><span style="color:green;">2.</span>Decision Tree</li>
+            <li><span style="color:green;">3.</span>Random Forest</li>
+            <li><span style="color:green;">4.</span>AdaBoost</li>
+            <li><span style="color:green;">5.</span>XGBoost</li>
+            <li><span style="color:green;">6.</span>LightGBM</li>
+            <li><span style="color:green;">7.</span>Multi-Layer Perceptron</li>
+
+            <p>
+            The training problem was set up as follows: we tried to predict if a particular client was going to default or repay their loan,
+            given 114 features that describe their situation and characteristics (datapoints obtained from the publicly available LendingClub data).
+            The data has a lot of categorical features and unusable predictors, so a round of data cleaning was needed.
+            We removed useless predictors such as client id and loan id, transformed dates into categoricals and categoricals into one-hot encoded variables,
+            removed columns with zero variance, and finally applied mean imputation to the cleaned dataset to fill out all the NaN values.
+
+            After this, we realized that some features clearly contained information posterior to the
+
+            We ended up with a dataset containing 194 features. After one-hot encoding, the grade and subgrade features transformed into 36 columns, for example.
+            </p>
             <hr class="my-4">
+
+            <h3 class="section-heading">2. Interpretability</h3>
+            <hr class="my-4">
+
+            <h3 class="section-heading">3. Fairness</h3>
+            <hr class="my-4">
+
+
           </div>
         </div>
       </div>
@@ -305,6 +339,7 @@
       	</form>
 
       </div> -->
+
       <div class="col-lg-8 mx-auto text-center" style="padding-top:50px">
         <a class="btn btn-light btn-xl " href="http://wholesome-auditor.herokuapp.com">View Demo</a>
       </div>
