Added first paragraph to interp approach

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                         <hr class="my-4">
 
                         <h3 class="section-heading">2. Interpretability</h3>
+				 <p>The quick brown fox jumped over the lazy dog.</p>
                         <hr class="my-4">
 
                         <h3 class="section-heading">3. Fairness</h3>
