--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <!-- Custom styles for this template -->
     <link href="css/creative.css" rel="stylesheet">
 
+
+
   </head>
 
   <body id="page-top">
@@ -124,49 +126,78 @@
             million total loans, Just under 50% of them are current loans that have not either
             been defaulted on or paid back.  We will ignore these loans for modeling purposes,
             which leaves us with a dataset of around 850k loans. </p>
-            <svg width="960" height="500"></svg>
-            <script > var svg = d3.select("svg"),
-                      width = +svg.attr("width"),
-                      height = +svg.attr("height"),
-                      radius = Math.min(width, height) / 2,
-                      g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
+            <style>
+            .node rect {
+              cursor: move;
+              fill-opacity: .9;
+              shape-rendering: crispEdges;
+            }
 
-                  var color = d3.scaleOrdinal(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+            .node text {
+              pointer-events: none;
+              text-shadow: 0 1px 0 #fff;
+            }
 
-                  var pie = d3.pie()
-                      .sort(null)
-                      .value(function(d) { return d.population; });
+            .link {
+              fill: none;
+              /*stroke: #000;*/
+              stroke-opacity: .5;
+            }
 
-                  var path = d3.arc()
-                      .outerRadius(radius - 10)
-                      .innerRadius(0);
+            .link:hover {
+              stroke-opacity: .8;
+            }
+            </style>
 
-                  var label = d3.arc()
-                      .outerRadius(radius - 40)
-                      .innerRadius(radius - 40);
+            <p id="chart1">
+            <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+            <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+            <script src="js/helper.js" type='text/javascript'></script>
+            <script>  sankey_plot() </script>
 
-                  d3.csv("data.csv", function(d) {
-                    d.population = +d.population;
-                    return d;
-                  }, function(error, data) {
-                    if (error) throw error;
+            <div class="container-fluid">
+            <div class="text-center">
+              <div class="service-box mx-auto" >
+                <img src="img/wc_viz.png" class='img-fluid'></img>
+                <h3 class="mb-3">What words come up with loan requests?</h3>
+                <p class="text-muted mb-0">The words in this word cloud are the terms that come up most often as the reason for a potential client requesting a loan.</p>
+              </div>
+            </div>
+          </div>
 
-                    var arc = g.selectAll(".arc")
-                      .data(pie(data))
-                      .enter().append("g")
-                        .attr("class", "arc");
+            <div class="container-fluid">
+            <div class="text-center">
+              <div class="service-box mx-auto">
+                <img src="img/pie_chart.png" class='img-fluid'></img>
+                <h3 class="mb-3">What states do most of the loan applications come from?</h3>
+                <p class="text-muted mb-0">As we would expect, the two most prevalent states are California and New York.</p>
+              </div>
+            </div>
+          </div>
 
-                    arc.append("path")
-                        .attr("d", path)
-                        .attr("fill", function(d) { return color(d.data.age); });
-
-                    arc.append("text")
-                        .attr("transform", function(d) { return "translate(" + label.centroid(d) + ")"; })
-                        .attr("dy", "0.35em")
-                        .text(function(d) { return d.data.age; });
-                  });
-              </script>
-
+          <div class="row">
+            <div class="col-lg-3 text-center" style="margin: auto">
+              <div class="service-box mt-5 mx-auto">
+                <img src="img/int_rate_plot.png" class='img-fluid'></img>
+                <h3 class="mb-3">Interest Rate by Defaults</h3>
+                <p class="text-muted mb-0">This plot shows the distributions of interest rate for clients that defaulted and clients that fully paid back their loans.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 text-center" style="margin: auto">
+              <div class="service-box mt-5 mx-auto">
+                <img src="img/FICO_scores.png" class='img-fluid'></img>
+                <h3 class="mb-3">FICO credit scores at loan inception</h3>
+                <p class="text-muted mb-0">Here we see the FICO credit scores at the time the loan was granted to the customer. There is a hard cut at a FICO score of 660.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 text-center" style="margin: auto">
+              <div class="service-box mt-5 mx-auto">
+                <img src="img/last_FICO_scores.png" class='img-fluid'></img>
+                <h3 class="mb-3">Current FICO credit scores</h3>
+                <p class="text-muted mb-0">Here we see the FICO scores in real time. We can clearly see some borrowers who will eventually default have very poor scores.</p>
+              </div>
+            </div>
+          </div>
 
 
 
@@ -384,10 +415,10 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
-    <script src="js/helper.js"></script>
+
 
     <!-- D3 for visulaization -->
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!-- <script src="js/d3.v4.min.js" charset="utf-8"></script> -->
 
     <!-- Scripts for Waves -->
     <script src="waves_animation/waves_files/three.js.download"></script>
