--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 
 
     <section id="EDA">
+      <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+      <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+      <script src="js/helper.js" type='text/javascript'></script>
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -150,9 +153,7 @@
             </style>
 
             <p id="chart1">
-            <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-            <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-            <script src="js/helper.js" type='text/javascript'></script>
+
             <script>  sankey_plot() </script>
 
             <div class="container-fluid">
@@ -197,6 +198,56 @@
                 <p class="text-muted mb-0">Here we see the FICO scores in real time. We can clearly see some borrowers who will eventually default have very poor scores.</p>
               </div>
             </div>
+          </div>
+
+          <style>
+
+          #sequence {
+            width: 650px;
+            height: 70px;
+          }
+
+          #sequence text {
+            font-weight: 600;
+            fill: #fff;
+          }
+
+          #chart2 {
+            position: relative;
+          }
+
+          #chart2 path {
+            stroke: #fff;
+          }
+
+          #explanation {
+            position: relative;
+            text-align: center;
+            color: #666;
+            z-index: -1;
+          }
+
+          #percentage {
+            font-size: 2.5em;
+          }
+          </style>
+        </br>
+          <div class="container-fluid">
+            <!-- <div id="main"> -->
+                <div id="sequence"></div>
+                <div id="chart2">
+                  <div id="explanation" style="visibility: hidden;">
+                  </div>
+                </div>
+              <!-- </div> -->
+            <script src="js/helper.js" stype='text/javascript'></script>
+            <script> sundisk_plot("hir_sq2.json")
+
+          </script>
+        </br>
+        <h3>Dataset Composition</h3>
+          <p class="text-muted">We can see what percentage of the dataset different combinations of classes make up.
+            Here we show Loan Grade, Length of applicant employement, and Loan Term, respectively to get a feel for the composition of the dataset.</p>
           </div>
 
 
