add attempted js bug fix

--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
             </style>
             <div id="chart3"></div>
             <script src="js/helper.js" stype='text/javascript'></script>
-            <script> plot_line("amnt_data.csv"); </script>
+            <script> plot_line("amnt_data.csv")
+            </script>
           </br>
           <h3>Loan Amount over Time</h3>
             <p class="text-muted">In this plot we can see the average loan amount change over time.
